--- a/res/layout/splash.xml
+++ b/res/layout/splash.xml
@@ -13,6 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/logo"
-        android:src="@drawable/logo" />
+        android:src="@drawable/logo_cnti" />
 
 </LinearLayout>
