--- a/res/layout/directory.xml
+++ b/res/layout/directory.xml
@@ -40,20 +40,17 @@
             android:clickable="true"
             android:focusable="true"
             android:onClick="onMainClick"
-            android:text="@string/app_name"
-            android:textColor="@color/text" />
+            android:text="@string/app_name" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/pipe"
-            android:textColor="@color/text" />
+            android:text="@string/pipe" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/directory"
-            android:textColor="@color/text" />
+            android:text="@string/directory" />
 
         <LinearLayout
             android:layout_width="fill_parent"
@@ -82,7 +79,6 @@
             android:layout_height="wrap_content"
             android:paddingRight="10dip"
             android:text="@string/selected"
-            android:textColor="@color/text"
             android:textSize="18sp" >
         </TextView>
 
