--- a/res/layout/government.xml
+++ b/res/layout/government.xml
@@ -53,20 +53,17 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="onMainClick"
-                    android:text="@string/app_name"
-                    android:textColor="@color/text" />
+                    android:text="@string/app_name" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/pipe"
-                    android:textColor="@color/text" />
+                    android:text="@string/pipe" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/government"
-                    android:textColor="@color/text" />
+                    android:text="@string/government" />
 
                 <LinearLayout
                     android:layout_width="fill_parent"
@@ -93,7 +90,6 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/name"
-                    android:textColor="@color/text"
                     android:textSize="18sp" />
 
                 <EditText
@@ -108,7 +104,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/subject"
-                android:textColor="@color/text"
                 android:textSize="18sp" >
             </TextView>
 
@@ -138,7 +133,6 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/body"
-                android:textColor="@color/text"
                 android:textSize="18sp" />
 
             <EditText
